[package]
name = "webunlocker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
rand = "0.8.5"
reqwest =  { version = "0.12.9" , features = ["blocking", "json"] }
tokio = { version = "1.42", features = ["full"] }
env_logger = "0.11.6"
actix-web = "4.9.0"
serde_derive = "1.0.216"
serde_json = "1.0.134"
serde = "1.0.216"
